@@ -3,16 +3,8 @@
 { "@VERSION@",
   [
     % To upgrade from the specified version to current one.
-    { "0.5.3", [{load_module, exmpp_xml}, {load_module, exmpp_jlib}]},
-    { "0.5.2", [{load_module, exmpp_xml}]},
-    { "0.5.1", [restart_new_emulator]},
-    { "0.5.0", [restart_new_emulator]}
   ], [
     % To downgrade from the current version to the specified one.
-    { "0.5.3", [{load_module, exmpp_xml}, {load_module, exmpp_jlib}]},
-    { "0.5.2", [{load_module, exmpp_xml}]},
-    { "0.5.1", [restart_new_emulator]},
-    { "0.5.0", [restart_new_emulator]}
   ]
 }.
 
